# czmut

./: .gitignore  CMakeLists.txt  CoolTerm.stc  LICENSE  README.md  gen_vs2022.bat  platformio.ini
cmake/: utils.cmake
examples/: example_basic.cpp  example_sections.cpp  example_templated.cpp  main_arduino.cpp  main_desktop.cpp
lib/: CMakeLists.txt  README  README.md  library.json
lib/czmut/: library.json
lib/czmut/src/czmut/: czmut.cpp  czmut.h
lib/czmut/src/czmut/ministd/: czmut_ministd.h  initializer_list
lib/docs/: CMakeLists.txt  README.md
lib/examples/: CMakeLists.txt  example_basic.cpp  example_basic.h  example_sections.h  example_templated.cpp  example_templated.h  main_desktop.cpp
lib/src/crazygaze/mut/: mut.cpp  mut.h  static_string.h
lib/src/crazygaze/mut/helpers/: static_string.h  vaargs_to_string_array.h
src/: CMakeLists.txt  mymain.cpp
visualstudio/: czmut.sln  czmut.vcxproj  czmut.vcxproj.filters  examples.vcxproj  examples.vcxproj.filters
